feat: poweron support individual file paths
